--- a/versions.gradle
+++ b/versions.gradle
@@ -29,6 +29,8 @@ versions.atsl_rules = "1.0.1"
 versions.hamcrest = "1.3"
 versions.kotlin = "1.1.60"
 versions.paging = "1.0.0-alpha5"
+versions.app_code = 1
+versions.app_name = "1.0"
 def deps = [:]
 
 def support = [:]
@@ -115,6 +117,11 @@ build_versions.min_sdk = 14
 build_versions.target_sdk = 27
 build_versions.build_tools = "27.0.3"
 ext.build_versions = build_versions
+
+def app_versions = [:]
+app_versions.code = 1
+app_versions.name = "1.0"
+ext.app_versions = app_versions
 
 
 def addRepos(RepositoryHandler handler) {
