--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,8 @@ dependencies {
     androidTestImplementation deps.mockito.core, { exclude group: 'net.bytebuddy' }
 
     implementation project(':recurve')
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
