--- a/versions.gradle
+++ b/versions.gradle
@@ -19,7 +19,8 @@ versions.mockito = "2.8.47"
 versions.mockito_all = "1.10.19"
 versions.dexmaker = "2.2.0"
 versions.constraint_layout = "1.0.2"
-versions.glide = "3.8.0"
+versions.glide = "3.8.0+"
+versions.glide_transformations = "3.1.1"
 versions.timber = "4.5.1"
 versions.android_gradle_plugin = "3.0.1"
 versions.rxjava2 = "2.1.3"
@@ -103,6 +104,7 @@ deps.kotlin = kotlin
 
 deps.paging = "android.arch.paging:runtime:$versions.paging"
 deps.glide = "com.github.bumptech.glide:glide:$versions.glide"
+deps.glide_transformations = "jp.wasabeef:glide-transformations:$versions.glide_transformations"
 deps.dexmaker = "com.linkedin.dexmaker:dexmaker-mockito:$versions.dexmaker"
 deps.constraint_layout = "com.android.support.constraint:constraint-layout:$versions.constraint_layout"
 deps.timber = "com.jakewharton.timber:timber:$versions.timber"
