--- a/recurve/build.gradle
+++ b/recurve/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation deps.kotlin.stdlib
 
     implementation deps.support.app_compat
+    implementation deps.support.recyclerview
     implementation deps.room.runtime
     implementation deps.lifecycle.runtime
     implementation deps.lifecycle.extensions
