--- a/versions.gradle
+++ b/versions.gradle
@@ -22,17 +22,19 @@ versions.constraint_layout = "1.0.2"
 versions.glide = "3.8.0+"
 versions.glide_transformations = "3.1.1"
 versions.timber = "4.5.1"
-versions.android_gradle_plugin = "3.1.0"
+versions.android_gradle_plugin = "3.1.2"
 versions.rxjava2 = "2.1.3"
 versions.rx_android = "2.0.1"
 versions.atsl_runner = "1.0.1"
 versions.atsl_rules = "1.0.1"
 versions.hamcrest = "1.3"
-versions.kotlin = "1.2.31"
+versions.kotlin = "1.2.40"
 versions.paging = "1.0.0-alpha5"
 versions.app_code = 1
 versions.app_name = "1.0"
-versions.databinding_compiler = "3.1.0"
+versions.databinding_compiler = "3.1.2"
+versions.apollo = "0.5.1-SNAPSHOT"
+
 def deps = [:]
 
 def support = [:]
@@ -96,11 +98,16 @@ mockito.all = "org.mockito:mockito-all:$versions.mockito_all"
 deps.mockito = mockito
 
 def kotlin = [:]
-kotlin.stdlib = "org.jetbrains.kotlin:kotlin-stdlib-jre7:$versions.kotlin"
+kotlin.stdlib_jre8 = "org.jetbrains.kotlin:kotlin-stdlib-jre8:$versions.kotlin"
+kotlin.stdlib_jdk8 = "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin"
 kotlin.test = "org.jetbrains.kotlin:kotlin-test-junit:$versions.kotlin"
 kotlin.plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
-
 deps.kotlin = kotlin
+
+def apollo = [:]
+apollo.runtime = "com.apollographql.apollo:apollo-runtime:$versions.apollo"
+apollo.plugin = "com.apollographql.apollo:apollo-gradle-plugin:$versions.apollo"
+deps.apollo = apollo
 
 deps.paging = "android.arch.paging:runtime:$versions.paging"
 deps.glide = "com.github.bumptech.glide:glide:$versions.glide"
@@ -115,8 +122,9 @@ deps.rx_android = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
 deps.hamcrest = "org.hamcrest:hamcrest-all:$versions.hamcrest"
 deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
 deps.databinding_compiler = "com.android.databinding:compiler:$versions.databinding_compiler"
-
 ext.deps = deps
+
+
 
 def build_versions = [:]
 build_versions.min_sdk = 14
