--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.21'
+    apply from: './github.gradle'
     apply from: './versions.gradle'
     addRepos(repositories)
     dependencies {
@@ -11,9 +12,6 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-    }
-    repositories {
-        mavenCentral()
     }
 }
 
