--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.2.40'
     ext.kotlin_version = '1.2.21'
     apply from: './github.gradle'
     apply from: './versions.gradle'
@@ -13,7 +14,13 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    repositories {
+        mavenCentral()
+    }
+
 }
+
+
 
 allprojects {
     addRepos(repositories)
