--- a/versions.gradle
+++ b/versions.gradle
@@ -35,12 +35,14 @@ versions.app_code = 1
 versions.app_name = "1.0"
 versions.databinding_compiler = "3.1.2"
 versions.apollo = "0.5.1-SNAPSHOT"
+versions.apollo_converter = "0.1.0"
 
 def deps = [:]
 
 def support = [:]
 support.annotations = "com.android.support:support-annotations:$versions.support"
 support.app_compat = "com.android.support:appcompat-v7:$versions.support"
+support.customtabs = "com.android.support:customtabs:$versions.support"
 support.recyclerview = "com.android.support:recyclerview-v7:$versions.support"
 support.cardview = "com.android.support:cardview-v7:$versions.support"
 support.design = "com.android.support:design:$versions.support"
@@ -108,6 +110,8 @@ deps.kotlin = kotlin
 def apollo = [:]
 apollo.runtime = "com.apollographql.apollo:apollo-runtime:$versions.apollo"
 apollo.plugin = "com.apollographql.apollo:apollo-gradle-plugin:$versions.apollo"
+apollo.converter = "com.apollographql.android:converter-pojo:$versions.apollo_converter"
+
 deps.apollo = apollo
 
 deps.paging = "android.arch.paging:runtime:$versions.paging"
@@ -125,10 +129,8 @@ deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_g
 deps.databinding_compiler = "com.android.databinding:compiler:$versions.databinding_compiler"
 ext.deps = deps
 
-
-
 def build_versions = [:]
-build_versions.min_sdk = 14
+build_versions.min_sdk = 15
 build_versions.target_sdk = 27
 build_versions.build_tools = "27.0.3"
 ext.build_versions = build_versions
