--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        buildConfigField 'String', 'CLIENT_ID', github.client_id
-        buildConfigField 'String', 'CLIENT_SECRET', github.client_secret
-        buildConfigField 'String', 'REDIRECTt_URI', github.redirect_uri
+
     }
     buildTypes {
         release {
@@ -51,72 +49,7 @@ apollo {
 }
 
 dependencies {
-    implementation deps.kotlin.stdlib_jre8
-    implementation deps.kotlin.stdlib_jdk8
-
-    implementation deps.support.app_compat
-    implementation deps.support.recyclerview
-    implementation deps.support.cardview
-    implementation deps.support.design
-    implementation deps.room.runtime
-    implementation deps.lifecycle.runtime
-    implementation deps.lifecycle.extensions
-    implementation deps.retrofit.runtime
-    implementation deps.retrofit.gson
-    implementation deps.glide
-
-    implementation deps.dagger.runtime
-    implementation deps.dagger.android
-    implementation deps.dagger.android_support
-    implementation deps.constraint_layout
-
-    implementation deps.room.rxjava2
-
-    // RxJava
-    implementation deps.rx_android
-    implementation deps.rxjava2
-
-    implementation deps.timber
-
-    kapt deps.dagger.android_support_compiler
-    kapt deps.dagger.compiler
-    kapt deps.room.compiler
-    kapt deps.lifecycle.compiler
-
-    implementation deps.apollo.runtime
-
-    kapt deps.databinding_compiler
-
-    testImplementation deps.junit
-    testImplementation deps.mock_web_server
-    testImplementation (deps.arch_core.testing, {
-        exclude group: 'com.android.support', module: 'support-compat'
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'com.android.support', module: 'support-core-utils'
-    })
-    testImplementation deps.mockito.core
-
-    androidTestImplementation deps.support.app_compat
-    androidTestImplementation deps.support.recyclerview
-    androidTestImplementation deps.support.cardview
-    androidTestImplementation deps.support.design
-
-    androidTestImplementation(deps.espresso.core, {
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'com.google.code.findbugs', module: 'jsr305'
-    })
-    androidTestImplementation(deps.espresso.contrib, {
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'com.google.code.findbugs', module: 'jsr305'
-    })
-
-    androidTestImplementation(deps.arch_core.testing, {
-    })
-    androidTestImplementation deps.dexmaker
-    androidTestImplementation deps.mockito.core, { exclude group: 'net.bytebuddy' }
-
-    implementation project(':recurve')
-    implementation 'com.apollographql.android:converter-pojo:0.1.0'
+    implementation project(':github_base')
 }
 repositories {
     mavenCentral()
