--- a/versions.gradle
+++ b/versions.gradle
@@ -4,14 +4,16 @@
 **/
 
 ext.deps = [:]
+def deps = [:]
+
 def versions = [:]
 versions.arch_core = "1.1.0"
-versions.room = "1.1.0-alpha2"
-versions.lifecycle = "1.1.0"
-versions.support = "27.1.0"
+versions.room = "1.1.0-beta3"
+versions.lifecycle = "1.1.1"
+versions.support = "27.1.1"
 versions.dagger = "2.12"
 versions.junit = "4.12"
-versions.espresso = "3.0.1"
+versions.espresso = "3.0.2"
 versions.retrofit = "2.3.0"
 versions.okhttp_logging_interceptor = "3.9.0"
 versions.mockwebserver = "3.8.1"
@@ -19,7 +21,7 @@ versions.apache_commons = "2.5"
 versions.mockito = "2.8.47"
 versions.mockito_all = "1.10.19"
 versions.dexmaker = "2.2.0"
-versions.constraint_layout = "1.0.2"
+versions.constraint_layout = "1.1.0"
 versions.glide = "3.8.0+"
 versions.glide_transformations = "3.1.1"
 versions.timber = "4.5.1"
@@ -36,8 +38,7 @@ versions.app_name = "1.0"
 versions.databinding_compiler = "3.1.2"
 versions.apollo = "0.5.1-SNAPSHOT"
 versions.apollo_converter = "0.1.0"
-
-def deps = [:]
+deps.version = versions
 
 def support = [:]
 support.annotations = "com.android.support:support-annotations:$versions.support"
