--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion build_versions.target_sdk
+    compileSdkVersion build_versions.compile_sdk
     buildToolsVersion build_versions.build_tools
     defaultConfig {
         applicationId "tang.com.mvvmrecurve"
@@ -49,7 +49,7 @@ apollo {
 }
 
 dependencies {
-    implementation project(':github_base')
+    api project(':github_base')
 }
 repositories {
     mavenCentral()
