--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        google()
     }
 
 }
@@ -24,4 +25,8 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+repositories {
+    google()
 }
