--- a/github_base/src/main/AndroidManifest.xml
+++ b/github_base/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="tang.com.oauth2" />
+    package="tang.com.github" />
