--- a/versions.gradle
+++ b/versions.gradle
@@ -10,7 +10,7 @@ def versions = [:]
 versions.arch_core = "1.1.0"
 versions.room = "1.1.0-beta3"
 versions.lifecycle = "1.1.1"
-versions.support = "27.1.1"
+versions.support = "28.0.0-alpha1"
 versions.dagger = "2.12"
 versions.junit = "4.12"
 versions.espresso = "3.0.2"
@@ -132,8 +132,9 @@ ext.deps = deps
 
 def build_versions = [:]
 build_versions.min_sdk = 15
-build_versions.target_sdk = 27
-build_versions.build_tools = "27.0.3"
+build_versions.compile_sdk = 'android-P'
+build_versions.target_sdk = 'P'
+build_versions.build_tools = "28.0.0-rc1"
 ext.build_versions = build_versions
 
 def app_versions = [:]
