--- a/github_base/build.gradle
+++ b/github_base/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion build_versions.compile_sdk
@@ -14,10 +15,7 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        buildConfigField 'String', 'CLIENT_ID', github.client_id
-        buildConfigField 'String', 'CLIENT_SECRET', github.client_secret
-        buildConfigField 'String', 'REDIRECTt_URI', github.redirect_uri
-        buildConfigField 'String', 'SCOPES', github.scopes
+        buildConfigField 'int', 'DB_VERSION_GITHUB', db_versions.github
     }
 
     dataBinding{
@@ -38,6 +36,10 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    androidExtensions {
+        experimental = true
     }
 
 
