--- a/versions.gradle
+++ b/versions.gradle
@@ -8,7 +8,7 @@ def deps = [:]
 
 def versions = [:]
 versions.arch_core = "1.1.0"
-versions.room = "1.1.0-beta3"
+versions.room = "1.1.1-rc1"
 versions.lifecycle = "1.1.1"
 versions.support = "28.0.0-alpha1"
 versions.dagger = "2.12"
@@ -102,7 +102,6 @@ mockito.all = "org.mockito:mockito-all:$versions.mockito_all"
 deps.mockito = mockito
 
 def kotlin = [:]
-kotlin.stdlib_jre8 = "org.jetbrains.kotlin:kotlin-stdlib-jre8:$versions.kotlin"
 kotlin.stdlib_jdk8 = "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin"
 kotlin.test = "org.jetbrains.kotlin:kotlin-test-junit:$versions.kotlin"
 kotlin.plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
