--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,10 @@ buildscript {
         classpath deps.android_gradle_plugin
         classpath deps.kotlin.plugin
         classpath deps.apollo.plugin
+        classpath 'com.tangpj.calces:plugin:1.0.1-SNAPSHOT'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-    }
-    repositories {
-        mavenCentral()
-        google()
     }
 
 }
@@ -27,6 +24,3 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-repositories {
-    google()
-}
