--- a/versions.gradle
+++ b/versions.gradle
@@ -25,7 +25,7 @@ versions.constraint_layout = "1.1.0"
 versions.glide = "3.8.0+"
 versions.glide_transformations = "3.1.1"
 versions.timber = "4.5.1"
-versions.android_gradle_plugin = "3.1.2"
+versions.android_gradle_plugin = "3.1.3"
 versions.rxjava2 = "2.1.3"
 versions.rx_android = "2.0.1"
 versions.atsl_runner = "1.0.1"
@@ -35,7 +35,7 @@ versions.kotlin = "1.2.40"
 versions.paging = "1.0.0-alpha5"
 versions.app_code = 1
 versions.app_name = "1.0"
-versions.databinding_compiler = "3.1.2"
+versions.databinding_compiler = "3.1.3"
 versions.apollo = "0.5.1-SNAPSHOT"
 versions.apollo_converter = "0.1.0"
 deps.version = versions
@@ -146,10 +146,12 @@ db_versions.github = "1"
 ext.db_versions = db_versions
 
 
-def addRepos(RepositoryHandler handler) {
+static def addRepos(RepositoryHandler handler) {
     handler.google()
     handler.jcenter()
     handler.mavenCentral()
+    handler.mavenLocal()
     handler.maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 ext.addRepos = this.&addRepos
+
