--- a/oauth2/build.gradle
+++ b/oauth2/build.gradle
@@ -1,4 +1,4 @@
-apply from: '../config.gradle'
+apply plugin: 'calces.modules'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
@@ -36,7 +36,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
 
 }
 
