--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,6 @@ buildscript {
         classpath deps.android_gradle_plugin
         classpath deps.kotlin.plugin
         classpath deps.apollo.plugin
-        classpath 'com.tangpj.calces:plugin:1.0.1-SNAPSHOT'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,7 +15,7 @@ buildscript {
 
 }
 plugins {
-    id "calces.appconfig" version "1.0.11"
+    id "calces.appconfig" version "1.1.0"
 }
 
 appConfig{
@@ -24,6 +23,7 @@ appConfig{
     apps{
         app{
             mainActivity ".MainActivity"
+            applicationName "tang.com.github.GitHubApp"
             modules ':oauth2'
         }
     }
