--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,17 @@
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
   <application android:supportsRtl="true" android:label="@string/app_name"  android:theme="@style/AppTheme" android:icon="@mipmap/ic_launcher" android:allowBackup="true" android:fullBackupContent="@xml/backup_descriptor" android:roundIcon="@mipmap/ic_launcher_round">
-    <activity android:name=".MainActivity">
+    <activity android:name=".MainActivity"
+        android:launchMode="singleTop">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW"/>
+        <data android:scheme="recurve" android:host="oauth" />
+        <category android:name="android.intent.category.DEFAULT"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
       </intent-filter>
     </activity>
   </application>
