--- a/versions.gradle
+++ b/versions.gradle
@@ -1,7 +1,7 @@
 /**
-* Shared file between builds so that they can all use the same dependencies and
-* maven repositories.
-**/
+ * Shared file between builds so that they can all use the same dependencies and
+ * maven repositories.
+ **/
 
 ext.deps = [:]
 def deps = [:]
@@ -36,7 +36,7 @@ versions.paging = "1.0.0-alpha5"
 versions.app_code = 1
 versions.app_name = "1.0"
 versions.databinding_compiler = "3.1.4"
-versions.apollo = "0.5.1-SNAPSHOT"
+versions.apollo = "1.0.0-alpha2"
 versions.apollo_converter = "0.1.0"
 deps.version = versions
 
@@ -73,6 +73,7 @@ def retrofit = [:]
 retrofit.runtime = "com.squareup.retrofit2:retrofit:$versions.retrofit"
 retrofit.gson = "com.squareup.retrofit2:converter-gson:$versions.retrofit"
 retrofit.mock = "com.squareup.retrofit2:retrofit-mock:$versions.retrofit"
+retrofit.rxjava_adapter = "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit"
 deps.retrofit = retrofit
 deps.okhttp_logging_interceptor = "com.squareup.okhttp3:logging-interceptor:${versions.okhttp_logging_interceptor}"
 
@@ -131,8 +132,7 @@ ext.deps = deps
 
 def build_versions = [:]
 build_versions.min_sdk = 15
-build_versions.compile_sdk = 'android-P'
-build_versions.target_sdk = 'P'
+build_versions.compile_sdk = 28
 build_versions.build_tools = "28.0.0-rc1"
 ext.build_versions = build_versions
 
@@ -151,6 +151,7 @@ static def addRepos(RepositoryHandler handler) {
     handler.jcenter()
     handler.mavenCentral()
     handler.mavenLocal()
+    handler.maven { url 'https://jitpack.io' }
     handler.maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 ext.addRepos = this.&addRepos
