--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    repositories {
+        google()
+    }
 
 }
 plugins {
