--- a/github_base/build.gradle
+++ b/github_base/build.gradle
@@ -50,22 +50,22 @@ android {
 
 
 dependencies {
-
-    api deps.support.app_compat
-    api deps.support.recyclerview
-    api deps.support.cardview
-    api deps.support.design
+    api project(':recurve')
+    api deps.support.material
     api deps.room.runtime
     api deps.lifecycle.runtime
     api deps.lifecycle.extensions
-    api deps.retrofit.runtime
     api deps.retrofit.gson
     api deps.retrofit.rxjava_adapter
-    api deps.glide
 
     api deps.dagger.runtime
-    api deps.dagger.android
-    api deps.dagger.android_support
+    api (deps.dagger.android){
+        exclude group: 'com.android.support'
+    }
+    api (deps.dagger.android_support){
+        exclude group: 'com.android.support'
+        exclude group: 'com.google.code.findbugs', module: 'jsr305'
+    }
     api deps.constraint_layout
 
     api deps.room.rxjava2
@@ -73,31 +73,22 @@ dependencies {
     // RxJava
     api deps.rx_android
     api deps.rxjava2
-    api deps.timber
 
-    kapt deps.dagger.android_support_compiler
     kapt deps.dagger.compiler
-    kapt deps.room.compiler
     kapt deps.lifecycle.compiler
 
-    api deps.apollo.runtime
     api deps.apollo.converter
 
     kapt deps.databinding_compiler
-    api project(':recurve')
-    api 'androidx.core:core-ktx:1.0.0-alpha1'
 
     androidTestImplementation deps.junit
     androidTestImplementation (deps.mock_web_server, {
-        exclude group: 'com.android.support', module: 'support-compat'
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'com.android.support', module: 'support-core-utils'
+        exclude group: 'com.android.support'
     })
 
-    androidTestImplementation deps.support.app_compat
-    androidTestImplementation deps.support.recyclerview
-    androidTestImplementation deps.support.cardview
-    androidTestImplementation deps.support.design
+    configurations {
+        all*.exclude group: 'com.android.support'
+    }
 
     androidTestImplementation(deps.espresso.core, {
         exclude group: 'com.android.support', module: 'support-compat'
