--- a/versions.gradle
+++ b/versions.gradle
@@ -7,14 +7,15 @@ ext.deps = [:]
 def deps = [:]
 
 def versions = [:]
-versions.arch_core = "1.1.0"
-versions.room = "1.1.1-rc1"
-versions.lifecycle = "1.1.1"
-versions.support = "28.0.0-alpha1"
-versions.dagger = "2.12"
+versions.arch_core = "2.0.0-alpha1"
+versions.room = "2.0.0-rc01"
+versions.paging = "2.0.0-rc01"
+versions.lifecycle = "2.0.0-rc01"
+versions.support = "1.0.0-alpha1"
+versions.dagger = "2.17"
 versions.junit = "4.12"
-versions.espresso = "3.0.2"
-versions.retrofit = "2.3.0"
+versions.espresso = "3.1.0-alpha1"
+versions.retrofit = "2.4.0"
 versions.okhttp_logging_interceptor = "3.9.0"
 versions.mockwebserver = "3.8.1"
 versions.apache_commons = "2.5"
@@ -22,51 +23,51 @@ versions.mockito = "2.8.47"
 versions.mockito_all = "1.10.19"
 versions.dexmaker = "2.2.0"
 versions.constraint_layout = "1.1.0"
-versions.glide = "3.8.0+"
-versions.glide_transformations = "3.1.1"
-versions.timber = "4.5.1"
-versions.android_gradle_plugin = "3.1.4"
-versions.rxjava2 = "2.1.3"
-versions.rx_android = "2.0.1"
-versions.atsl_runner = "1.0.1"
+versions.glide = "4.7.1"
+versions.glide_transformations = "3.3.0"
+versions.timber = "4.7.1"
+versions.android_gradle_plugin = '3.3.0-alpha08'
+versions.rxjava2 = "2.2.1"
+versions.rx_android = "2.1.0"
+versions.atsl_runner = "1.1.0-alpha1"
 versions.atsl_rules = "1.0.1"
 versions.hamcrest = "1.3"
 versions.kotlin = "1.2.61"
-versions.paging = "1.0.0-alpha5"
+versions.ktx = "1.0.0-rc02"
 versions.app_code = 1
 versions.app_name = "1.0"
-versions.databinding_compiler = "3.1.4"
+versions.databinding_compiler = "3.2.0-alpha11"
 versions.apollo = "1.0.0-alpha2"
 versions.apollo_converter = "0.1.0"
 deps.version = versions
 
 def support = [:]
-support.annotations = "com.android.support:support-annotations:$versions.support"
-support.app_compat = "com.android.support:appcompat-v7:$versions.support"
-support.customtabs = "com.android.support:customtabs:$versions.support"
-support.recyclerview = "com.android.support:recyclerview-v7:$versions.support"
-support.cardview = "com.android.support:cardview-v7:$versions.support"
-support.design = "com.android.support:design:$versions.support"
-support.v4 = "com.android.support:support-v4:$versions.support"
-support.core_utils = "com.android.support:support-core-utils:$versions.support"
+support.appcompat = "androidx.appcompat:appcompat:$versions.support"
+support.recyclerView = "androidx.recyclerview:recyclerview:$versions.support"
+support.annotations = "androidx.annotation:annotation:$versions.support"
+support.customtabs = "androidx.browser:browser:$versions.support"
+support.material = "com.google.android.material:material:$versions.support"
+support.core_utils = "androidx.legacy:legacy-support-core-utils:$versions.support"
 deps.support = support
 
 def room = [:]
-room.runtime = "android.arch.persistence.room:runtime:$versions.room"
-room.compiler = "android.arch.persistence.room:compiler:$versions.room"
-room.rxjava2 = "android.arch.persistence.room:rxjava2:$versions.room"
-room.testing = "android.arch.persistence.room:testing:$versions.room"
+room.runtime = "androidx.room:room-runtime:$versions.room"
+room.compiler = "androidx.room:room-compiler:$versions.room"
+room.rxjava2 = "androidx.room:room-rxjava2:$versions.room"
+room.testing = "androidx.room:room-testing:$versions.room"
 deps.room = room
 
 def lifecycle = [:]
-lifecycle.runtime = "android.arch.lifecycle:runtime:$versions.lifecycle"
-lifecycle.extensions = "android.arch.lifecycle:extensions:$versions.lifecycle"
-lifecycle.java8 = "android.arch.lifecycle:common-java8:$versions.lifecycle"
-lifecycle.compiler = "android.arch.lifecycle:compiler:$versions.lifecycle"
+lifecycle.runtime = "androidx.lifecycle:lifecycle-runtime:$versions.lifecycle"
+lifecycle.extensions = "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle"
+lifecycle.viewmodel = "androidx.lifecycle:lifecycle-viewmodel:$versions.lifecycle"
+lifecycle.livedata = "androidx.lifecycle:lifecycle-livedata:$versions.lifecycle"
+lifecycle.java8 = "androidx.lifecycle:lifecycle-common-java8:$versions.lifecycle"
+lifecycle.compiler = "androidx.lifecycle:lifecycle-compiler:$versions.lifecycle"
 deps.lifecycle = lifecycle
 
 def arch_core = [:]
-arch_core.testing = "android.arch.core:core-testing:$versions.arch_core"
+arch_core.testing = "androidx.arch.core:core-testing:$versions.arch_core"
 deps.arch_core = arch_core
 
 def retrofit = [:]
@@ -87,14 +88,14 @@ dagger.android_support_compiler = "com.google.dagger:dagger-android-processor:$v
 deps.dagger = dagger
 
 def espresso = [:]
-espresso.core = "com.android.support.test.espresso:espresso-core:$versions.espresso"
-espresso.contrib = "com.android.support.test.espresso:espresso-contrib:$versions.espresso"
-espresso.intents = "com.android.support.test.espresso:espresso-intents:$versions.espresso"
+espresso.core = "androidx.test.espresso:espresso-core:$versions.espresso"
+espresso.contrib = "androidx.test.espresso:espresso-contrib:$versions.espresso"
+espresso.intents = "androidx.test.espresso:espresso-intents::$versions.espresso"
 deps.espresso = espresso
 
 def atsl = [:]
-atsl.runner = "com.android.support.test:runner:$versions.atsl_runner"
-atsl.rules = "com.android.support.test:rules:$versions.atsl_runner"
+atsl.runner = "androidx.test:runner:$versions.atsl_runner"
+atsl.rules = "androidx.test:rules:$versions.atsl_runner"
 deps.atsl = atsl
 
 def mockito = [:]
@@ -106,6 +107,7 @@ def kotlin = [:]
 kotlin.stdlib_jdk8 = "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin"
 kotlin.test = "org.jetbrains.kotlin:kotlin-test-junit:$versions.kotlin"
 kotlin.plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+kotlin.ktx = "androidx.core:core-ktx:$versions.ktx"
 deps.kotlin = kotlin
 
 def apollo = [:]
@@ -115,11 +117,11 @@ apollo.converter = "com.apollographql.android:converter-pojo:$versions.apollo_co
 
 deps.apollo = apollo
 
-deps.paging = "android.arch.paging:runtime:$versions.paging"
+deps.paging = "androidx.paging:paging-runtime:$versions.paging"
 deps.glide = "com.github.bumptech.glide:glide:$versions.glide"
 deps.glide_transformations = "jp.wasabeef:glide-transformations:$versions.glide_transformations"
 deps.dexmaker = "com.linkedin.dexmaker:dexmaker-mockito:$versions.dexmaker"
-deps.constraint_layout = "com.android.support.constraint:constraint-layout:$versions.constraint_layout"
+deps.constraint_layout = "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
 deps.timber = "com.jakewharton.timber:timber:$versions.timber"
 deps.junit = "junit:junit:$versions.junit"
 deps.mock_web_server = "com.squareup.okhttp3:mockwebserver:$versions.mockwebserver"
@@ -127,7 +129,7 @@ deps.rxjava2 = "io.reactivex.rxjava2:rxjava:$versions.rxjava2"
 deps.rx_android = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
 deps.hamcrest = "org.hamcrest:hamcrest-all:$versions.hamcrest"
 deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
-deps.databinding_compiler = "com.android.databinding:compiler:$versions.databinding_compiler"
+deps.databinding_compiler = "androidx.databinding:compiler:$versions.databinding_compiler"
 ext.deps = deps
 
 def build_versions = [:]
