--- a/oauth2/src/main/AndroidManifest.xml
+++ b/oauth2/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="tang.com.oauth" />
+    package="com.tangpj.oauth" />
