--- a/oauth2/src/main/AndroidManifest.xml
+++ b/oauth2/src/main/AndroidManifest.xml
@@ -1,2 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tangpj.oauth" />
+    package="com.tangpj.oauth" >
+
+
+    <application android:supportsRtl="true"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme"
+        android:icon="@mipmap/ic_launcher"
+        android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
+        android:roundIcon="@mipmap/ic_launcher_round">
+
+
+
+    </application>
+
+</manifest>
