--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,13 @@
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-  <application android:supportsRtl="true" android:label="@string/app_name"  android:theme="@style/AppTheme" android:icon="@mipmap/ic_launcher" android:allowBackup="true" android:fullBackupContent="@xml/backup_descriptor" android:roundIcon="@mipmap/ic_launcher_round">
+  <application android:supportsRtl="true"
+      android:label="@string/app_name"
+      android:theme="@style/AppTheme"
+      android:icon="@mipmap/ic_launcher"
+      android:allowBackup="true"
+      android:fullBackupContent="@xml/backup_descriptor"
+      android:roundIcon="@mipmap/ic_launcher_round">
     <activity android:name=".MainActivity"
         android:launchMode="singleTop">
       <intent-filter>
