--- a/modules/oauth2/src/main/AndroidManifest.xml
+++ b/modules/oauth2/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tangpj.oauth" >
-
+    package="com.tangpj.oauth2" >
 
     <application android:supportsRtl="true"
         android:label="@string/app_name"
@@ -9,12 +8,9 @@
         android:allowBackup="true"
         android:roundIcon="@mipmap/ic_launcher_round">
 
-        <activity android:name="com.tangpj.oauth2.ui.Oauth2Activity"
+        <activity android:name="ui.Oauth2Activity"
             android:launchMode="singleTop">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <data android:scheme="recurve" android:host="oauth" />
