--- a/versions.gradle
+++ b/versions.gradle
@@ -32,7 +32,7 @@ versions.rx_android = "2.1.0"
 versions.atsl_runner = "1.1.0-alpha1"
 versions.atsl_rules = "1.0.1"
 versions.hamcrest = "1.3"
-versions.kotlin = "1.2.61"
+versions.kotlin = "1.2.71"
 versions.ktx = "1.0.0-rc02"
 versions.navigation = "1.0.0-alpha04"
 versions.app_code = 1
@@ -125,6 +125,7 @@ deps.navigation = navigation
 def apollo = [:]
 apollo.runtime = "com.apollographql.apollo:apollo-runtime:$versions.apollo"
 apollo.plugin = "com.apollographql.apollo:apollo-gradle-plugin:$versions.apollo"
+apollo.android_support = "com.apollographql.apollo:apollo-android-support:$versions.apollo"
 apollo.converter = "com.apollographql.android:converter-pojo:$versions.apollo_converter"
 
 deps.apollo = apollo
