--- a/modules/oauth2/src/main/AndroidManifest.xml
+++ b/modules/oauth2/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tangpj.oauth2" >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application android:supportsRtl="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
@@ -9,7 +13,7 @@
         android:allowBackup="true"
         android:roundIcon="@mipmap/ic_launcher_round">
 
-        <activity android:name="ui.Oauth2Activity"
+        <activity android:name=".ui.Oauth2Activity"
             android:launchMode="singleTop">
 
             <intent-filter>
