--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
     apply from: './versions.gradle'
     addRepos(repositories)
     dependencies {
-        classpath deps.android_gradle_plugin
         classpath deps.kotlin.plugin
         classpath deps.apollo.plugin
         classpath deps.navigation.safe_args_plugin
+        classpath "com.tangpj.tools:calces-gradle-plugin:1.2.42"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,10 +18,9 @@ buildscript {
     }
 
 }
-plugins {
-    id "calces.appconfig" version "1.2.31"
-}
 
+apply plugin: "calces.appconfig"
+ 
 appConfig{
     debugEnable true
     apps{
