--- a/settings.gradle
+++ b/settings.gradle
@@ -2,8 +2,10 @@ include ':app', ':baselib:github_base',
         ':baselib:res',':recurve',
         'recurve-retrofit2-support',
         'recurve-apollo-support',
+        'recurve-dagger2-support',
         ':modules:oauth2'
 
 project(":recurve").projectDir = file("../MvvmRecurve/recurve")
 project(":recurve-retrofit2-support").projectDir = file("../MvvmRecurve/recurve-retrofit2-support")
 project(":recurve-apollo-support").projectDir = file("../MvvmRecurve/recurve-apollo-support")
+project(":recurve-dagger2-support").projectDir = file("../MvvmRecurve/recurve-dagger2-support")
