--- a/baselib/github_base/build.gradle
+++ b/baselib/github_base/build.gradle
@@ -40,8 +40,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
 
     androidExtensions {
@@ -55,6 +55,7 @@ android {
 dependencies {
     api project(':recurve')
     api project(':recurve-retrofit2-support')
+    api project(':recurve-dagger2-support')
     api project(':recurve-apollo-support')
     api deps.androidx.material
     api deps.room.runtime
@@ -63,6 +64,13 @@ dependencies {
     api deps.retrofit.gson
     api deps.retrofit.rxjava_adapter
     api deps.navigation.fragment_ktx
+    api deps.navigation.fragment
+    api deps.navigation.runtime
+
+    api deps.dagger.runtime
+    api deps.dagger.android
+    api deps.dagger.android_support
+
 
     api deps.constraint_layout
 
@@ -71,6 +79,7 @@ dependencies {
     // RxJava
     api deps.rx_android
     api deps.rxjava2
+    kapt  'com.android.tools.build.jetifier:jetifier-core:1.0.0-beta02'
 
     api project(':baselib:res')
 
@@ -78,13 +87,13 @@ dependencies {
     api deps.apollo.runtime
     api deps.apollo.android_support
 
-    kapt deps.dagger.android_support_compiler
     kapt deps.dagger.compiler
+    kapt deps.dagger.android_support_compiler
 
     kapt deps.room.compiler
     kapt deps.lifecycle.compiler
 
-    kapt deps.databinding_compiler
+    kapt 'com.android.tools.build.jetifier:jetifier-core:1.0.0-beta02'
 
     androidTestImplementation deps.junit
     androidTestImplementation (deps.mock_web_server, {
