--- a/versions.gradle
+++ b/versions.gradle
@@ -23,7 +23,7 @@ versions.mockito = "2.8.47"
 versions.mockito_all = "1.10.19"
 versions.dexmaker = "2.2.0"
 versions.constraint_layout = "1.1.0"
-versions.glide = "4.7.1"
+versions.glide = "4.8.0"
 versions.glide_transformations = "3.3.0"
 versions.timber = "4.7.1"
 versions.android_gradle_plugin = '3.3.0-alpha08'
@@ -34,12 +34,13 @@ versions.atsl_rules = "1.0.1"
 versions.hamcrest = "1.3"
 versions.kotlin = "1.2.71"
 versions.ktx = "1.0.0-rc02"
-versions.navigation = "1.0.0-alpha04"
+versions.navigation = "1.0.0-alpha06"
 versions.app_code = 1
 versions.app_name = "1.0"
 versions.databinding_compiler = "3.3.0-alpha08"
 versions.apollo = "1.0.0-alpha2"
 versions.apollo_converter = "0.1.0"
+versions.jetifier = "1.0.0-beta02"
 deps.version = versions
 
 def androidx = [:]
@@ -143,6 +144,7 @@ deps.rx_android = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
 deps.hamcrest = "org.hamcrest:hamcrest-all:$versions.hamcrest"
 deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
 deps.databinding_compiler = "androidx.databinding:databinding-compiler:$versions.databinding_compiler"
+deps.jetifier = "com.android.tools.build.jetifier:jetifier-processor:$versions.jetifier"
 ext.deps = deps
 
 def build_versions = [:]
