--- a/modules/repositories/src/main/AndroidManifest.xml
+++ b/modules/repositories/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tangpj.user">
+    package="com.tangpj.repositories">
 
     <application
         android:allowBackup="true"
