--- a/baselib/res/src/main/AndroidManifest.xml
+++ b/baselib/res/src/main/AndroidManifest.xml
@@ -6,5 +6,5 @@
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.Normal" />
+        android:theme="@style/AppTheme.Night" />
 </manifest>
